--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -1,3 +1,11 @@
-<p>
-  skill works!
-</p>
+<div id="skill">
+  <h2>WHAT I DO?</h2>
+  <div class="card">
+    <div class="header-bar">
+      <span class="dot red"></span>
+      <span class="dot yellow"></span>
+      <span class="dot green"></span>
+    </div>
+    {{ skills }}
+  </div>
+</div>
