--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,14 +1,12 @@
 <div id="contact">
   <img src="assets/mypic.jpg" class="thumbnail" alt="">
-
-  <div class="social-bar">
-
-    <a class="link" *ngFor="let link of socialLinks" [href]="link.link">
-      <i class="fa" [ngClass]="link.icon" aria-hidden="true"></i>
-      <span>{{link.value}}</span>
-    </a>
-
+  <h2>GET IN TOUCH</h2>
+  <div class="row">
+    <div class="social-bar">
+      <a class="link" *ngFor="let link of socialLinks" [href]="link.link">
+        <i class="fa" [ngClass]="link.icon" aria-hidden="true"></i>
+        <span>{{link.value}}</span>
+      </a>
+    </div>
   </div>
-
-
 </div>
