--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -2,23 +2,40 @@
     height: 100px;
     width: 100px;
     border-radius: 50%;
+    margin-bottom: 1em;
 }
 
 #contact {
     height: 100vh;
-    background: #51414d;
+    background: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    h2 {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 36px;
+        line-height: 38px;
+        padding-bottom: 0px;
+        font-weight: 400;
+        text-transform: uppercase;
+        margin: 0px;
+        border-bottom: #ef7674 6px solid;
+        padding-bottom: 9px;
+        color: #5b4c5c;
+        margin-bottom: 45px;
+    }
     .social-bar {
         display: flex;
-        justify-content: space-around;
-        flex-direction: column;
+        justify-content: center;
+        flex-wrap: wrap;
         .link {
+            width: 20em;
+            display: flex;
+            justify-content: space-around;
             text-decoration: none;
-            color: white;
             margin: 1em;
+            color: #5b4c5c;
             i {
                 margin-right: 1em;
                 font-size: 1.4em;
