--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -19,6 +19,7 @@
       margin: 0px;
       padding-bottom: 8px;
       color: white;
+      text-align: center;
       text-transform: uppercase;
     }
     h4 {
