--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -6,6 +6,42 @@
       <span class="dot yellow"></span>
       <span class="dot green"></span>
     </div>
-    {{ skills }}
+    <p>
+      <span class="var-2">Currently Working</span>
+      <span class="text"> : Associate Software Engineer -
+        <span class="var-3">Venture Dive</span>
+      </span>
+    </p>
+
+    <p>
+      <span class="var-2">Last Education</span>
+      <span class="text"> : Bachelor of Science in Computer Science -
+        <span class="var-3">University of Karachi</span>
+      </span>
+    </p>
+
+    <p class="comment">
+      // - - - - - -  Skill Set - - - - - - 
+    </p>
+
+    <p>
+      <span class="var">Frameworks And Libraries</span>
+      <span class="text"> : {{skills.Frameworks_Libraries | formatter}}</span>
+    </p>
+
+    <p>
+      <span class="var">Front End </span>
+      <span class="text"> : {{skills.Front_End | formatter}}</span>
+    </p>
+
+    <p>
+      <span class="var">Languages</span>
+      <span class="text"> : {{skills.Languages | formatter}}</span>
+    </p>
+
+    <p>
+      <span class="var">Version Controlling</span>
+      <span class="text"> : {{skills.Version_Controlling | formatter}}</span>
+    </p>
   </div>
 </div>
