--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -3,6 +3,7 @@
     width: 100px;
     border-radius: 50%;
     margin-bottom: 1em;
+    margin-top: 3em;
 }
 
 #contact {
@@ -43,7 +44,7 @@
                 transition: 0.2s;
                 &:hover {
                     transform: scale(1.2);
-                    color: white;
+                    color: #ef7674;
                 }
             }
         }
