--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -4,7 +4,7 @@
             <span>Muzammil Bilwani </span>
         </h2>
         <h4>Building applications that can ease life.</h4>
-        <div>
+        <div class="flex-box">
             <a>
                 What I am good at?
             </a>
