--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -8,7 +8,7 @@
     </div>
     <p>
       <span class="var-2">Currently Working</span>
-      <span class="text"> : Associate Software Engineer -
+      <span class="text"> : Software Engineer -
         <span class="var-3">Venture Dive</span>
       </span>
     </p>
@@ -21,7 +21,7 @@
     </p>
 
     <p class="comment">
-      // - - - - - -  Skill Set - - - - - - 
+      // - - - - - - Skill Set - - - - - -
     </p>
 
     <p>
@@ -43,5 +43,10 @@
       <span class="var">Version Controlling</span>
       <span class="text"> : {{skills.Version_Controlling | formatter}}</span>
     </p>
+    <p>
+      <span class="var">Deployment and Cloud</span>
+      <span class="text"> : {{skills.Deployment_Cloud | formatter}}</span>
+    </p>
+
   </div>
 </div>
