--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -31,7 +31,7 @@
         justify-content: center;
         flex-wrap: wrap;
         .link {
-            width: 20em;
+            // width: 20em;
             display: flex;
             justify-content: space-around;
             text-decoration: none;
