--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -5,6 +5,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  margin-bottom: 2px;
   .content {
     display: flex;
     justify-content: center;
@@ -39,9 +40,17 @@
       font-size: 14px;
       background-color: #ef7674;
       text-transform: uppercase;
-      padding: 1.5em;
+      padding: 1em;
+      border-radius: 10px;
       margin: 1em;
       cursor: pointer;
     }
   }
+}
+
+.flex-box {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
 }
