--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,16 +1,11 @@
 <div id="intro">
     <div class="content">
+        <img src="assets/mypic.jpg" class="thumbnail" alt="">
+
         <h2> I'm
             <span>Muzammil Bilwani </span>
         </h2>
         <h4>Building applications that can ease life.</h4>
-        <div class="flex-box">
-            <a>
-                What I am good at?
-            </a>
-            <a>
-                Want to get in touch?
-            </a>
-        </div>
+
     </div>
 </div>
