--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -12,6 +12,11 @@
         <span class="var-3">Venture Dive</span>
       </span>
     </p>
+    <p>
+      <span class="var-2"> Started working </span>
+      <span class="text"> : {{ getTime() }}
+      </span>
+    </p>
 
     <p>
       <span class="var-2">Last Education</span>
@@ -37,6 +42,11 @@
     <p>
       <span class="var">Languages</span>
       <span class="text"> : {{skills.Languages | formatter}}</span>
+    </p>
+
+    <p>
+      <span class="var">Databases</span>
+      <span class="text"> : {{skills.Databases | formatter}}</span>
     </p>
 
     <p>
