--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -7,13 +7,13 @@
 }
 
 #contact {
-  background: #fff;
+  background: #f8f7f8;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  padding-top: 2em;
+  padding-bottom: 2em;
   h2 {
     font-family: 'Open Sans', sans-serif;
     font-size: 36px;
