--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,15 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
+
+.center {
+  text-align: center;
+}
+
+.hand {
+  cursor: pointer;
+}
+
+* {
+  font-family: 'Open Sans', sans-serif;
+}
