--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="social-bar">
       <a class="link" *ngFor="let link of socialLinks" [href]="link.link" target="__black">
-        <i class="fa" [ngClass]="link.icon" aria-hidden="true"></i>
+        <i class="" [ngClass]="link.icon" aria-hidden="true"></i>
         <!-- <span>{{link.value}}</span> -->
       </a>
     </div>
