--- a/src/app/intro/intro.component.scss
+++ b/src/app/intro/intro.component.scss
@@ -6,15 +6,17 @@
   -o-background-size: cover;
   background-size: cover;
   margin-bottom: 2px;
+
   .content {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     height: 100%;
+
     h2 {
       font-family: "Open Sans", sans-serif;
-      font-size: 48px;
+      font-size: 42px;
       line-height: 57px;
       font-weight: 700;
       margin: 0px;
@@ -23,6 +25,7 @@
       text-align: center;
       text-transform: uppercase;
     }
+
     h4 {
       font-family: "Open Sans", sans-serif;
       font-size: 15px;
@@ -35,6 +38,7 @@
       color: #fff;
       padding-bottom: 42px;
     }
+
     a {
       line-height: 52px;
       color: #fff;
@@ -45,6 +49,12 @@
       border-radius: 10px;
       margin: 1em;
       cursor: pointer;
+    }
+
+    i {
+      font-size: 3em;
+      color: white;
+      align-content: flex-end;
     }
   }
 }
