--- a/src/app/skill/skill.component.scss
+++ b/src/app/skill/skill.component.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     font-family: 'Open Sans', sans-serif;
+
     h2 {
         font-size: 36px;
         line-height: 38px;
@@ -18,29 +19,43 @@
         margin-bottom: 45px;
         margin-top: 45px;
     }
-    .card {
-        width: 65%;
-        border-radius: 10px;
-        background: #314249;
-        padding: 30px 34px 41px;
-        margin-bottom: 1em;
+
+    .box {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        .card {
+            max-width: 40%;
+            border-radius: 10px;
+            background: #314249;
+            padding: 30px 34px 41px;
+            margin: 1em;
+            @media (max-width: 768px) {
+                max-width: 80%;
+  
+            }
+        }
     }
 }
 
 .header-bar {
     display: flex;
+
     .dot {
-        height: 20px;
-        width: 20px;
+        height: 15px;
+        width: 15px;
         border-radius: 50%;
         margin-right: 0.6em;
     }
+
     .red {
         background: #FA6055;
     }
+
     .yellow {
         background: #FFBB2C;
     }
+
     .green {
         background: #24CB40;
     }
@@ -63,5 +78,17 @@
 }
 
 .comment {
-  color :#687981
+    color: #687981
+}
+
+.var-4{
+    color : #5cacef;
+}
+
+.var-5{
+    color :#a0b0c1;
+}
+
+.spacer{
+    margin-right: 9em;
 }
