--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -6,6 +6,6 @@
             <span>Muzammil Bilwani </span>
         </h2>
         <h4>Building applications that can ease life.</h4>
-        <i class="fas fa-angle-double-down animated infinite bounce delay-5s hand"></i>
+        <i (click)="scrollDown()" class="fas fa-angle-double-down animated infinite bounce delay-5s hand"></i>
     </div>
 </div>
