--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -86,6 +86,11 @@
       </p>
 
       <p>
+        <span class="var">Mobile App Development</span>
+        <span class="text"> : {{skills.Mobile_App_Development | formatter}}</span>
+      </p>
+
+      <p>
         <span class="var">Languages</span>
         <span class="text"> : {{skills.Languages | formatter}}</span>
       </p>
